# descholar

./: .gitignore  .gitmodules  LICENSE  README.md  package.json
bindings/: README.md  package-lock.json
bindings/src/: index.ts
contracts/descholar/: README.md
contracts/descholar/contracts/descholar/: Cargo.toml
contracts/descholar/contracts/descholar/src/: lib.rs
contracts/edu/: descholar.interface.sol  foundry.toml
contracts/edu/cache/: solidity-files-cache.json
contracts/edu/script/: descholar.s.sol  interactions.s.sol
contracts/edu/src/: descholar.sol
contracts/edu/test/: descholar.t.sol
contracts/stellarship/: Cargo.toml
contracts/stellarship/src/: lib.rs  test.rs
descholarFrontend/: next.config.mjs  package-lock.json  package.json  tsconfig.json
descholarFrontend/app/: ClientLayout.tsx  globals.css  layout.tsx  page.tsx
descholarFrontend/app/addscholarship/: page.tsx
descholarFrontend/app/components/: Footer.tsx  MissionLink.tsx  Navbar.tsx  Notification.tsx  ScholarshipConfirmation.tsx  TypewriterEffect.tsx  connect.tsx
descholarFrontend/app/hooks/: useContractInteraction.ts  useCreateScholarshipHook.ts  useEduScholarshipHook.ts
descholarFrontend/app/myactivity/: page.tsx
descholarFrontend/app/providers/: Web3Modal.tsx
descholarFrontend/bindings/: README.md  package-lock.json
descholarFrontend/styles/: globals.css
descholarFrontend/types/: bindings.d.ts
soroban-react-dapp/: package-lock.json  package.json
stellarship/src/: lib.rs
stellarshipFn/stellarshipfrontend/: package-lock.json  package.json
(+37 files in other folders)
